DataWatcherの整理、付随する関数の修正。